# Discord-bot

./: .gitignore  README.md  embed.json  keep_alive.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: requirements_builder.yml
commands/: general.py  menu.py  troll.py  voice.py
components/: buttons.py  menus.py
